[package]
name = "chargend-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["env", "derive"] }
humantime = "2.2.0"
tokio = { version = "1.44.2", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
